--- a/Labs/2025/06-stl-templates/doc/06-stl-templates.tex
+++ b/Labs/2025/06-stl-templates/doc/06-stl-templates.tex
@@ -173,8 +173,9 @@ operator*(sparse_matrix &M,
 \end{lstlisting}
 \end{frame}
 
-\begin{frame}[fragile]{Bonus 2 - Finite differences}
-Implement a \texttt{C++} template class to compute derivatives of any order of a given function (callable object) using recursive backward/forward first-order finite difference formulas.
+\begin{frame}[fragile]{Exercise 2 - Templates}
+	Generalise the sparse matrix class using templates, to make it able to store any custom type instead of {\ttfamily double}s only
 \end{frame}
+
 
 \end{document}
