--- a/Labs/2025/07-eigen/doc/07-eigen-newton.tex
+++ b/Labs/2025/07-eigen/doc/07-eigen-newton.tex
@@ -46,16 +46,39 @@
 \end{frame}
 
 \begin{frame}{Newton solver}
-This example (a simplified version of \texttt{Examples/src/NewtonSolver}) is about a set of tools that implement generic Newton or quasi-Newton methods to determine the zero of a system of non-linear equations, based on the \texttt{Eigen} library.
+	This example (an extended version of \texttt{Examples/src/NewtonSolver}) is about a set of tools that implement generic Newton or quasi-Newton methods to determine the zero of scalar non-linear equations, as well as vector systems using the \texttt{Eigen} library.
+	
+	The code structure is the following:
+	\begin{itemize}
+		\item \texttt{NewtonTraits} contains the definition of the types used by the main classes, to guarantee uniformity.
+		\item \texttt{JacobianBase} is a base class which implements the action of a \textit{quasi-Jacobian}: the user may choose among \texttt{FullJacobian} where the actual Jacobian must be specified by the user, and \texttt{DiscreteJacobian}, that approximates the Jacobian via finite differences.
+		\item \texttt{JacobianFactory} instantiates a concrete derived class of \texttt{JacobianBase} family on the fly.
+		\item \texttt{Newton} applies the Newton method, given the non-linear system and a \texttt{JacobianBase}.
+		\item \texttt{NewtonOptions} and \texttt{NewtonResults} bind the input options and the output results.
+	\end{itemize}
+\end{frame}
 
-The code structure is the following:
-\begin{itemize}
-\item \texttt{NewtonTraits} contains the definition of the types used by the main classes, to guarantee uniformity.
-\item \texttt{JacobianBase} is a base class which implements the action of a \textit{quasi-Jacobian}: the user may choose among \texttt{FullJacobian} where the actual Jacobian (or an approximation of it) must be specified by the user, and \texttt{DiscreteJacobian}, that approximates the Jacobian via finite differences.
-\item \texttt{JacobianFactory} instantiates a concrete derived class of \texttt{JacobianBase} family on the fly.
-\item \texttt{Newton} applies the Newton method, given the non-linear system and a \texttt{JacobianBase}.
-\item \texttt{NewtonOptions} and \texttt{NewtonResults} encapsulate the input options and the output results.
-\end{itemize}
+\begin{frame}{Exercise}
+	Consider the problem
+	\[
+	\mathbf{f}(x, y) =
+	\begin{bmatrix}
+		(x-1)^2 + 0.1(y - 5)^2 \\
+		1.5 -x - 0.1y
+	\end{bmatrix}
+	=
+	\mathbf{0}.
+	\]
+	
+	Starting from the provided solution sketch:
+	\begin{enumerate}
+		\item Implement the \texttt{NewtonTraits} class defining common types for homogeneity.
+		\item Implement the \texttt{FullJacobian} class (inheriting from \texttt{JacobianBase}) which, provided the full Jacobian matrix, solves the linear system using a direct solver with \(LU\) factorization.
+		\item \texttt{DiscreteJacobian} (inheriting from \texttt{JacobianBase}) which approximates the system Jacobian using finite differences and solves the linear system using a direct solver with \(LU\) factorization.
+		\item Implement a \texttt{JacobianFactory} method, returning an istance of \texttt{FullJacobian} or \texttt{DiscreteJacobian} depending on a parameter chosen by the user.
+		\item Solve the problem above using both the full and the discrete approach.
+	\end{enumerate}
 \end{frame}
 
 \end{document}
+
