a few corrections to slide - lab 14 - cmake

--- a/Labs/2025/14-cmake/doc/14-CMake.tex
+++ b/Labs/2025/14-cmake/doc/14-CMake.tex
@@ -46,7 +46,7 @@
     \end{itemize}
     \item \textbf{GNU Autotools}\footnote{\url{https://www.gnu.org/software/automake/manual/}}
     \begin{itemize}
-    \item PRO: Excellent support for legacy Unix platforms, large selection of existing modules.
+    \item PRO: Excellent support also for legacy Unix platforms, robust, large selection of existing modules.
     \item CON: Slow, hard to use correctly, painful to debug, poor support for non-Unix platforms.
     \end{itemize}
     \item \textbf{Meson}\footnote{\url{https://mesonbuild.com/}}, \textbf{Bazel}\footnote{\url{https://bazel.build/}}, \textbf{SCons}\footnote{\url{https://scons.org/}}, \dots
@@ -73,7 +73,7 @@
 
 \begin{frame}{Why CMake?}
 \begin{itemize}
-    \item More packages use CMake than any other system
+    \item Increasingly more packages use CMake than any other system
     \item almost every IDE supports CMake (or vice-versa)
     \item really cross-platform, no better choices for Windows
     \item extensible, modular design
